--- a/51/clock-sdcc-mk/makefile
+++ b/51/clock-sdcc-mk/makefile
@@ -7,7 +7,8 @@ CC      = sdcc
 # ARCH = pic14
 
 # CFLAGS = -m$(ARCH) -p$(MCU) 
-CFLAGS = --verbose -V
+# CFLAGS = --verbose -V
+CFLAGS = --opt-code-size
 # LDFLAGS = -c -r -w -m I/usr/share/sdcc/lib/$(ARCH)/
 
 # set output folder and target name
