--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,14 @@
-*/Debug/*
-*/tags
-*/*.tags
-*/GPATH
-*/GRTAGS
-*/GTAGS
-*/TAGS
-*/*.log
-*/Objects/*
-*/Listings/*
-*/tags
-*/.o
-*/out/*
+**/Debug
+**/tags
+**/*.tags
+**/GPATH
+**/GRTAGS
+**/GTAGS
+**/TAGS
+**/*.log
+**/Objects/*
+**/Listings/*
+**/.o
+**/out/*
 **/*.log
 **/log
