--- a/stm8/clock-stm8-sdcc-mk/Makefile
+++ b/stm8/clock-stm8-sdcc-mk/Makefile
@@ -38,10 +38,7 @@ PRJ_OBJECTS := $(addprefix $(OUTPUT_DIR)/, $(PRJ_SOURCE:.c=.rel))
 SPL_ROOT    = $(HOME)/mine/mcu/stm8/framework-ststm8spl-platformio
 SPL_SRC_DIR = $(SPL_ROOT)/Libraries/STM8S_StdPeriph_Driver/src
 SPL_INC_DIR = $(SPL_ROOT)/Libraries/STM8S_StdPeriph_Driver/inc
-SPL_SOURCE  = stm8s_gpio.c \
-		stm8s_tim2.c \
-		stm8s_tim3.c \
-		stm8s_tim4.c
+SPL_SOURCE  = stm8s_gpio.c stm8s_tim2.c stm8s_tim3.c stm8s_tim4.c stm8s_exti.c
 SPL_OBJECTS := $(addprefix $(OUTPUT_DIR)/, $(SPL_SOURCE:.c=.rel))
 
 # set path to STM8S_EVAL board routines
