--- a/51/clock-sdcc-mk/makefile
+++ b/51/clock-sdcc-mk/makefile
@@ -1,4 +1,5 @@
-DEVICE = stc8f2k32s2
+# DEVICE = stc8f2k32s2
+DEVICE = st12c5a60s2
 # set compiler path & parameters
 CC_ROOT =
 CC      = sdcc
@@ -8,7 +9,8 @@ CC      = sdcc
 
 # CFLAGS = -m$(ARCH) -p$(MCU) 
 # CFLAGS = --verbose -V
-CFLAGS = --opt-code-size
+# CFLAGS = --opt-code-size
+CFLAGS = --model-large
 # LDFLAGS = -c -r -w -m I/usr/share/sdcc/lib/$(ARCH)/
 
 # set output folder and target name
